
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int atoi (scalar_t__) ;
 int exit (int) ;
 int fputs (char*,int ) ;
 int stdout ;
 scalar_t__ strchr (int *,char) ;
 int * stristr (int *,char*) ;

int getproto(u_char *buff) {
    int p;
    u_char *ptr;

    ptr = stristr(buff, "\\protocol\\");
    if(!ptr) {
        fputs("\n"
            "Error: No protocol informations in the answer of the server\n"
            "       Is impossible to continue without this information\n"
            "\n", stdout);
        exit(1);
    }
    p = atoi(strchr(ptr + 1, '\\') + 1);
    return(p);
}
